style.css
nav {
  padding: 10px;
  float: left;
  margin-top: 100px;
  margin-right: 300px;
}

nav t {
  background-color: #d5e0e5;
  color: rgb(1, 33, 55);
  font-family: monospace;
  font-size: 24px;
  font-weight: bold;
  float: left;
  margin-top: 100px;
  margin-left: 100px;
  margin-right: 200px;
}

nav a {
  background-color: #0c4b68;
  color: white;
  font-family: monospace;
  text-decoration: none;
  padding: 8px 16px;
  margin-top: 10px;
}

nav a:hover {
  background-color: #6191a1;
}

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin-top: 20px;
}

.oval-pic {
  width: 200px;
  height: 200px;
  border-radius: 40%;
  background-image: url(Nav_Pic.jpg);
  background-size: cover;
  margin-top: 20px;
}

body {
  width: 100%;
  height: 100%;
  /*overflow: hidden;
  margin-top: 100vh;/*
  /*margin-left: 300vw;
  margin-right: 300vw;*/
}

@media (max-width: 768px) {
  .container {
      width: 100%;
      padding: 10px;
  }
}

